made changes, getting ready toi deploy

--- a/index.html
+++ b/index.html
@@ -2,6 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/icons8-geometric-tools-line-16.png"
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="96x96"
+      href="./assets/icons8-geometric-tools-line-96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/icons8-geometric-tools-line-32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/icons8-geometric-tools-line-16.png"
+    />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Px to Units</title>
